# rust-parallel-mandelbrot-study

./: Cargo.toml  README.md
src/: main.rs
