[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["raimon <raimon49@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.4.1"
crossbeam-utils = "0.8.7"

# [build.release]
# # リリースビルドでデバッグシンボルを有効にしたい時に指定
# debug = true
